--- a/pag02.html
+++ b/pag02.html
@@ -22,6 +22,8 @@
             <a href="pag01.html">VW FUSCA</a>
             <a href="pag03.html">FORD MAVERICK</a>
             <a href="pag04.html">GURGEL</a>
+            <a href="pag05.html">DODGE</a>
+            <a href="pag06.html">PUMA</a>
             
         </nav>
                 <main>
