--- a/pag05.html
+++ b/pag05.html
@@ -18,7 +18,7 @@
     
         </header>
         <nav>
-            <a href="inedx.html">HOME</a>
+            <a href="index.html">HOME</a>
             <a href="pag01.html">VW FUSCA</a>
             <a href="pag02.html">CHEVY OPALA</a>
             <a href="pag03.html">FORD MAVERICK</a>
