--- a/pag06.html
+++ b/pag06.html
@@ -17,7 +17,8 @@
 </header>
 
         <nav>
-            <a href="index.html">VW FUSCA</a>
+            <a href="index.html">HOME</a>
+            <a href="pag01.html">VW FUSCA</a>
             <a href="pag02.html">CHEVY OPALA</a>
             <a href="pag03.html">FORD MAVERICK</a>
             <a href="pag04.html">GURGEL</a>
