--- a/pag05.html
+++ b/pag05.html
@@ -24,6 +24,8 @@
             <a href="pag03.html">FORD MAVERICK</a>
             <a href="pag04.html">GURGEL</a>
             <a href="pag06.html">PUMA</a> 
+            <a href="pag07.html">GOL GT/GTS/GTI/TSI</a>
+            <a href="pag08.html">KADETT GS/GSI</a>
         </nav>
     
   <main>
