--- a/pag04.html
+++ b/pag04.html
@@ -23,6 +23,8 @@
         <a href="pag03.html">FORD MAVERICK</a>
         <a href="pag05.html">DODGE</a>
         <a href="pag06.html">PUMA</a>
+        <a href="pag07.html">GOL GT/GTS/GTI/TSI</a>
+        <a href="pag08.html">KADETT GS/GSI</a>
        
     </nav>
  <main>
