--- a/pag06.html
+++ b/pag06.html
@@ -23,8 +23,8 @@
             <a href="pag03.html">FORD MAVERICK</a>
             <a href="pag04.html">GURGEL</a>
             <a href="pag05.html">DODGE</a>
-    
-    
+            <a href="pag07.html">GOL GT/GTS/GTI/TSI</a>
+            <a href="pag08.html">KADETT GS/GSI</a>
         </nav> 
 <main>
                     <h1>Puma: história, anos, versões, motor, detalhes e curiosidades.</h1> 
