--- a/pag06.html
+++ b/pag06.html
@@ -18,9 +18,9 @@
 
         <nav>
             <a href="index.html">HOME</a>
-            <a href="pag01.html">VW FUSCA</a>
-            <a href="pag02.html">CHEVY OPALA</a>
-            <a href="pag03.html">FORD MAVERICK</a>
+            <a href="pag01.html">FUSCA</a>
+            <a href="pag02.html">OPALA</a>
+            <a href="pag03.html">MAVERICK</a>
             <a href="pag04.html">GURGEL</a>
             <a href="pag05.html">DODGE</a>
             <a href="pag07.html">GOL GT/GTS/GTI/TSI</a>
