--- a/pag02.html
+++ b/pag02.html
@@ -19,8 +19,8 @@
 
         <nav>
             <a href="index.html">HOME</a>
-            <a href="pag01.html">VW FUSCA</a>
-            <a href="pag03.html">FORD MAVERICK</a>
+            <a href="pag01.html">FUSCA</a>
+            <a href="pag03.html">MAVERICK</a>
             <a href="pag04.html">GURGEL</a>
             <a href="pag05.html">DODGE</a>
             <a href="pag06.html">PUMA</a>
