--- a/pag07.html
+++ b/pag07.html
@@ -23,9 +23,9 @@
    
         <nav>
             <a href="index.html">HOME</a>
-            <a href="pag01.html">VW FUSCA</a>
-            <a href="pag02.html">CHEVY OPALA</a>
-            <a href="pag03.html">FORD MAVERICK</a>
+            <a href="pag01.html">FUSCA</a>
+            <a href="pag02.html">OPALA</a>
+            <a href="pag03.html">MAVERICK</a>
             <a href="pag04.html">GURGEL</a>
             <a href="pag05.html">DODGE</a>
             <a href="pag06.html">PUMA</a> 
